# polynomial-roots-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Google_tests/: CMakeLists.txt  HelloTest.cpp  RootsTest.cpp  RootsTest.h
roots_library/: Array.h  library.cpp  library.h  main.cpp  test_library_.cpp  test_library_.h
